--- a/ReservasHotel/ReservasHotel.Presentacion/ReservasHotel.Presentacion.csproj
+++ b/ReservasHotel/ReservasHotel.Presentacion/ReservasHotel.Presentacion.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Models\ClienteRepositorio.cs" />
     <Compile Include="Models\Habitacion.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ReservasHotelDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -224,6 +225,7 @@
     <Content Include="Views\Cliente\Index.cshtml" />
     <Content Include="Views\Cliente\CrearCliente.cshtml" />
     <Content Include="Views\Habitacion\CrearHabitacion.cshtml" />
+    <Content Include="Views\Cliente\EditarCliente.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
