--- a/ReservasHotel/ReservasHotel.Persistencia/ReservasHotel.Persistencia.csproj
+++ b/ReservasHotel/ReservasHotel.Persistencia/ReservasHotel.Persistencia.csproj
@@ -49,14 +49,25 @@
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\Habitacion.cs" />
     <Compile Include="Entidades\Reserva.cs" />
+    <Compile Include="Migrations\201510121813407_InitialCreate.cs" />
+    <Compile Include="Migrations\201510121813407_InitialCreate.Designer.cs">
+      <DependentUpon>201510121813407_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\ClienteRepositorio.cs" />
     <Compile Include="Repositorios\HabitacionRepositorio.cs" />
+    <Compile Include="Repositorios\ReservaRepositorio.cs" />
     <Compile Include="ReservasHotelDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201510121813407_InitialCreate.resx">
+      <DependentUpon>201510121813407_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
